# agent-os

./: .gitignore  LICENSE  OPEN-ITEMS.md  README.md  pyproject.toml
.claude/: CLAUDE.md
docs/: README.md
docs/architecture/: agent-os-architecture.md  agent-teams.md  inter-agency-patterns.md  layering.md  overview.md
docs/architecture/kernel/: services.md
docs/decisions/: 0006-context-plane-as-kernel-foundation.md  0007-framework-light-kernel-design.md  0008-hotl-oversight-model.md
docs/planning/: agentic-rollout-plan.md  rollout-planning-briefing.md
docs/research/: context-engineering-report.md
docs/research/sources/a2a/: a2a-protocol-agent2agent-explained-how-ai-agents-collaborate.md  agent-harness-explained-in-8min.md  agentic-ai-frameworks-explained-workflows-multi-agent-and-production.md  are-your-ai-agents-flying-blind-the-truth-about-agentops.md  building-a-team-of-ai-agents-roles-feedback-and-teamwork-explained.md  context-engineering-explained-what-every-ai-developer-should-know.md  context-engineering-vs-prompt-engineering-smarter-ai-with-rag-and-agents.md  guide-to-architect-secure-ai-agents-best-practices-for-safety.md  multi-agent-systems-explained-how-ai-agents-and-llms-work-together.md  why-ai-agents-need-an-operating-system.md
docs/research/sources/api/: what-is-an-api-types-uses-and-ai-integration.md
examples/: log_look.py
src/agent_os/: __init__.py
src/agent_os/kernel/: __init__.py  context.py  scheduler.py
src/agent_os/observability/: __init__.py  trace.py
tests/: test_context_verbs.py  test_scheduler.py  test_trace.py
(+3 files in other folders)
