[project]
name = "agent-os"
version = "0.0.0"
description = "An operating system for AI agents."
requires-python = ">=3.11"
dependencies = []

[tool.ruff]
line-length = 88

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_os"]
